# mathematics-for-ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  setup.py  setup.sh
.github/workflows/: ci.yml
config/: config.yaml
docs/: CONTRIBUTING.md  DEPLOYMENT.md  index.md
notebooks/basics/: 01_introduction.ipynb
notebooks/linear-algebra/: 01-vectors-basics.py  01_vectors_matrices.ipynb
src/: cli.py
src/ai_models/: __init__.py  clustering.py  linear_models.py  neural_networks.py  svm.py
src/config/: __init__.py
src/data_utils/: __init__.py
src/math_utils/: __init__.py  calculus.py  linear_algebra.py  probability.py  statistics.py
src/visualization/: __init__.py  animations.py  plots_2d.py  plots_3d.py
tests/: __init__.py  test_calculus.py  test_linear_algebra.py  test_linear_models.py
